--- a/calc.kv
+++ b/calc.kv
@@ -111,8 +111,8 @@
 
     MathInput:
         id: input
-        text: u'2+2\u00D72'
-        focus: True
+        text: u'2+2*2'
+        focus: False
         font_size: 72
         multiline: False
         size: root.width, root.height / 8
