--- a/numpad.kv
+++ b/numpad.kv
@@ -17,10 +17,10 @@
         NumBtn:
             invalue: ')'
         NumBtn:
-            text: ''
-        NumBtn:
             text: 'DEL'
             on_release: app.btn_del_symb()
+        NumBtn:
+            text: '^'
     # ------------------------------- 4 line
         NumBtn:
             invalue: '7'
